<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/btn_plan_classic"
            style="@style/MaterialCard">


            <TextView
                android:id="@+id/plan_head"
                style="@style/MaterialCartText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_plan_classic"
                android:transitionName="activity_transition"
                />

    </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/btn_calculators"
            style="@style/MaterialCard">

        <TextView
            android:id="@+id/calc_head"
            style="@style/MaterialCartText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_calculators"
            android:transitionName="activity_transition"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_calendar"
            style="@style/MaterialCard">


            <TextView
                style="@style/MaterialCartText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_calendar" />

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>