<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/btn_nds_calc"
            style="@style/MaterialCard">

            <TextView
                android:id="@+id/nds_calc_head"
                style="@style/MaterialCartText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/NDS_calc_text"
                android:transitionName="activity_transition"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_vacation_calc"
            style="@style/MaterialCard">


            <TextView
                android:id="@+id/vacation_calc_head"
                style="@style/MaterialCartText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vacation_calc_text"
                android:transitionName="activity_transition"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_penalty_calc"
            style="@style/MaterialCard">


            <TextView
                android:id="@+id/penalty_calc_head"
                style="@style/MaterialCartText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/penality_calc_text"
                android:transitionName="activity_transition"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>